--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
+  url: <%= ENV['DATABASE_URL'] %>
+  # adapter: postgresql
+  # encoding: unicode
+  # pool: 5
 
