--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "5.3.0",
     "bootstrap": "4.3.1",
     "bootstrap-icons": "^1.5.0",
+    "bs-custom-file-input": "^1.3.4",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
