--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "basic-mini-blog-part1",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-free": "^6.0.0-beta2",
+    "@popperjs/core": "^2.10.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.3.0",
-    "bootstrap": "4.3.1",
+    "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
+    "bootswatch": "^5.1.1",
     "bs-custom-file-input": "^1.3.4",
     "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
