--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -17,6 +17,7 @@ default: &default
 
   # Extract and emit a css file
   extract_css: false
+  #extract_css: true
   
   static_assets_extensions:
     - .jpg
