--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootswatch": "^5.1.1",
     "bs-custom-file-input": "^1.3.4",
     "jquery": "^3.6.0",
+    "resolve-url-loader": "^4.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
