--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
 version: '3'
 services:
-    web-db:
+    web:
         build: .
         command: bundle exec rails s -p 3000 -b '0.0.0.0'
         volumes:
             - .:/myapp
         ports:
             - "3000:3000"
+        depends_on:
+            - db
+        tty: true
+    db:
+        image: mysql:5.7
+        command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
+        volumes:
+            - db-volume:/var/lib/mysql
+        environment:
+            MYSQL_ROOT_PASSWORD: password
+            TZ: "Asia/Tokyo"
+        ports:
+            - "3306:3306"
+volumes:
+    db-volume:
