--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
-    web:
+    ap:
         build: .
-        command: bundle exec rails s -p 3000 -b '0.0.0.0'
+        command: bundle exec rails s
         volumes:
             - .:/myapp
-        ports:
-            - "3000:3000"
+            - public-data:/myapp/public
+            - tmp-data:/myapp/tmp
         depends_on:
             - db
         tty: true
@@ -20,5 +20,16 @@ services:
             TZ: "Asia/Tokyo"
         ports:
             - "3306:3306"
+    web:
+      build: ./nginx
+      volumes:
+        - public-data:/myapp/public
+        - tmp-data:/myapp/tmp
+      ports:
+        - 80:80
+      depends_on:
+        - ap
 volumes:
     db-volume:
+    public-data:
+    tmp-data:
