--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,8 +3,10 @@ upstream myapp {
 }
 
 server {
-    listen 80;
+    listen 443 ssl;
     server_name localhost;
+    ssl_certificate /etc/certs/localhost.pem;
+    ssl_certificate_key /etc/certs/localhost-key.pem;
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
