--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,9 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/.htpasswd;
+
     root /myapp/public;
 
     client_max_body_size 100m;
